--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/mariomalak1/-digital_bookstore#readme",
   "dependencies": {
     "csv-parse": "^6.1.0",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "joi": "^18.0.2",
     "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
